modal on small screens correction v2

--- a/style.css
+++ b/style.css
@@ -339,7 +339,7 @@ form #newwrapper:hover {
     }
 
     #modalcontent {
-        width: 90%;
+        width: 80%;
         overflow-y: auto;
     }
 }
